<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberOfFavouriteStations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                android:id="@+id/stationsSearch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="3"
                android:hint="@string/selectStationLabel"
                android:selectAllOnFocus="true"
                android:singleLine="true">

            </AutoCompleteTextView>

            <TextView
                android:id="@+id/selectedStationText"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/transportationTypeLabel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/departuresResults"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxMetro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/metroLabel"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBoxBus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/busLabel"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBoxTrain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/trainLabel"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/checkBoxTram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/tramLabel"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
